Add Swagger auth and roles
