# interface/auth/handler.go
@@ -11,6 +11,17 @@ type AuthHandler struct {
 	Svc domains.AuthService
 }
 
+// Register User godoc
+// @Summary Register User
+// @Description Create Register User
+// @Tags Auth
+// @accept json
+// @Produce json
+// @Router /register [post]
+// @Param data body entities.User true "required"
+// @Success 200 {object} entities.User
+// @Failure 401 {object} entities.User
+// @Failure 500 {object} entities.User
 func (h *AuthHandler) RegisterHandler(c echo.Context) error {
 	user := entities.User{}
 	err := c.Bind(&user)
@@ -37,6 +48,18 @@ func (h *AuthHandler) RegisterHandler(c echo.Context) error {
 	})
 }
 
+// Login User godoc
+// @Summary Login User
+// @Description Login User
+// @Tags Auth
+// @accept json
+// @Produce json
+// @Router /login [post]
+// @Param data body entities.User true "required"
+// @Success 200 {object} entities.User
+// @Success 400 {object} entities.User
+// @Failure 401 {object} entities.User
+// @Failure 500 {object} entities.User
 func (h *AuthHandler) LoginHandler(c echo.Context) error {
 	userLogin := entities.User{}
 
